# book

./: .gitignore  .travis.yml  404.html  CONVENTIONS.md  Cargo.toml  README.md  book.toml  index.html  intro.html  lib.rs  print.html  searchindex.js  searchindex.json
.github/workflows/: ci.yml  publish.yml
client/: intro.html
client/general/: event_queues.html  initializing.html  intro.html  objects.html  registry.html
client/sctk/: drawing.html  environment.html  image_viewer.html  intro.html  window.html
server/: intro.html
src/: SUMMARY.md  intro.md  test.md  test.rs
src/client/: intro.md
src/client/general/: event_queues.md  initializing.md  intro.md  intro.rs  objects.md  protocol.md  registry.md
src/client/sctk/: drawing.md  environment.md  image_viewer.md  intro.md  window.md
src/server/: intro.md
src/server/general/: creation.md  creation_code.md  intro.md
src/wayland/: structure.md
src/wayland/p_core/: compositor.md  seat.md  subcompositor.md
wayland/: intro.html  structure.html
wayland/p_core/: compositor.html  data_device.html  intro.html  output.html  seat.html  shell.html  shm.html  special.html  subcompositor.html
